[gd_scene load_steps=11 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://UIs/back.jpg" type="Texture" id=2]
[ext_resource path="res://Fonts/scribish.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UIs/warrior.png" type="Texture" id=4]
[ext_resource path="res://UIs/logo 12c.png" type="Texture" id=5]
[ext_resource path="res://UIs/music_scott_lawlor_strange_lullaby.ogg" type="AudioStream" id=6]
[ext_resource path="res://UIs/clic_button.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxLine" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
color = Color( 0, 0, 0, 1 )
grow = 1.0
thickness = 1
vertical = false

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="StartMenu" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="back" type="Sprite" parent="." index="0"]

position = Vector2( 142.577, 89.6206 )
scale = Vector2( 0.5, 0.4 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="Start" type="Button" parent="." index="1"]

modulate = Color( 0.886275, 0.901961, 0.623529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 59.0
margin_top = 87.0
margin_right = 240.0
margin_bottom = 122.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_fonts", "custom_styles" ]

[node name="Quit" type="Button" parent="." index="2"]

modulate = Color( 0.886275, 0.901961, 0.623529, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 61.0
margin_top = 116.0
margin_right = 242.0
margin_bottom = 151.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 2 )
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Quit"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="NameGame" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_top = 43.0
margin_right = 379.0
margin_bottom = 120.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.887308, 0.902344, 0.627411, 1 )
custom_colors/font_color_shadow = Color( 0.0531492, 0.152344, 0.0523682, 1 )
text = "Ot The God"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Margin", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="warrior" type="Sprite" parent="." index="4"]

position = Vector2( 250.926, 116.952 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="logo 12c" type="Sprite" parent="." index="5"]

position = Vector2( 9.29548, 170.198 )
scale = Vector2( 0.008, 0.008 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform" ]

[node name="AudioBack" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 6 )
volume_db = 2.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="sfx" type="Node" parent="." index="7" groups=[
"sfx",
]]

[node name="AudioClicButton" type="AudioStreamPlayer" parent="sfx" index="0"]

stream = ExtResource( 7 )
volume_db = 5.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"
_sections_unfolded = [ "Pause" ]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]


